前端页面写入 项目.NET RZOR 引擎

--- a/CTEP/Content/main.css
+++ b/CTEP/Content/main.css
@@ -1,192 +1,4 @@
-﻿@media screen and (max-width: 330px) {
-    #register_page .card {
-        background: transparent;
-        padding: 0.8em;
-        margin: 1.4em auto;
-        width: 18em;
-    }
-
-    #register_page #tranLog {
-        position: relative;
-        left: 16em;
-        width: 32px;
-        padding: 2px;
-    }
-
-    #register_page .input-group {
-        margin: 0.8em auto;
-        padding: 0.4em;
-    }
-}
-
-@media screen and (min-width: 331px) {
-    #register_page .card {
-        background: transparent;
-        padding: 0.8em;
-        margin: 2.6em auto;
-        width: 22em;
-    }
-
-    #register_page #tranLog {
-        position: relative;
-        left: 20em;
-        width: 32px;
-        padding: 2px;
-    }
-
-    #register_page .input-group {
-        margin: 1.6em auto;
-        padding: 0.4em;
-    }
-}
-
-
-.icon-sm {
-    width: 1em;
-    height: 1em;
-    vertical-align: -0.15em;
-    fill: currentColor;
-    overflow: hidden;
-}
-.icon-lg {
-    width: 4em;
-    height: 4em;
-    vertical-align: -0.15em;
-    fill: currentColor;
-    overflow: hidden;
-}
-
-.icon{
-    width: 3em;
-    height: 3em;
-    vertical-align: -0.15em;
-    fill: currentColor;
-    overflow: hidden;
-}
-
-
-.container-fluid {
-    position: fixed;
-    top: 0;
-}
-
-.card-body {
-    background: white;
-}
-
-.card-footer,
-.card-header {
-    background: transparent;
-    text-align: center;
-}
-
-#loginbtg {
-    display: none;
-}
-
-.card {
-    background: #fff;
-    border-radius: 6px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, .1);
-    display: flex;
-    flex-direction: column;
-    transition: box-shadow .2s ease-in-out;
-}
-
-.card__picture {
-    display: block;
-    width: 100%;
-    height: auto;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-}
-
-.card-infos {
-    padding: 20px;
-    background: #fff;
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
-}
-
-.card__title {
-    font-family: 'Hind';
-    font-size: 1.8rem;
-    font-weight: 600;
-    line-height: 1.4;
-    margin: 0 0 10px;
-}
-
-.card__text {
-    font-size: 1.4rem;
-    font-weight: 300;
-    margin: 0;
-    color: #86888A;
-}
-
-.card__text--high {
-    font-weight: 600;
-}
-
-.header {
-    background: var(--main-bg-color);
-    height: 160px;
-    display: flex;
-}
-
-.header__title {
-    margin: auto;
-    font-weight: 300;
-    font-size: 3.2rem;
-    color: #fff;
-}
-
-.header__title--high {
-    font-weight: 600;
-}
-
-.sortable__nav {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-}
-
-.nav__link {
-    padding: 0 20px 4px;
-    color: #111;
-    font-size: 1.4rem;
-    font-weight: 300;
-    display: block;
-    border-bottom: 2px solid transparent;
-}
-
-    .nav__link.is-active {
-        border-color: var(--main-bg-color);
-    }
-
-.footer__list.list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.list__item.item {
-    display: flex;
-}
-
-.item__link.link {
-    margin: 0;
-}
-
-    .item__link.link:not(:first-child) {
-        margin-left: 20px;
-    }
-
-.link__icon {
-    height: 2rem;
-    width: 2rem;
-}
-
-.fixed-top {
+﻿.fixed-top {
     margin-bottom: 0;
 }
 
@@ -195,6 +7,10 @@
     border: 0px;
 }
 
+    .card img {
+        width: 100%;
+        height: 100%;
+    }
 
 .jumbotron {
     color: #13227a;
