--- a/CTEP/Views/Shared/_NoneLay.cshtml
+++ b/CTEP/Views/Shared/_NoneLay.cshtml
@@ -4,39 +4,20 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+
+
+    @Styles.Render("~/style/base")
+    @Scripts.Render("~/js/base")
+    @Scripts.Render("~/js/ui")
+    @RenderSection("head", false)
+
 </head>
+
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <span class = "navbar-brand">EMB课堂评价管理平台-账户管理</span> 
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <Br />
-        <hr />
 
-        <footer>
-            <p>&copy; @DateTime.Now.Year - EMB (CTEP)课堂评价管理平台</p>
-            <p><small> ClassRoom Teaching Evalution Plantform</small></p>
-        </footer>
-    </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @RenderBody()
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
