--- a/CTEP/Views/Shared/_LayoutUser.cshtml
+++ b/CTEP/Views/Shared/_LayoutUser.cshtml
@@ -30,7 +30,7 @@
             <ul>
 
                 <li>
-                    <a id="login" href="@Url.RouteUrl(new { Control="Home",Action="Index"})">
+                    <a  href="@Url.RouteUrl(new { Control="Home",Action="Index"})">
                         <p align="center">
                             <span>
                                 Bui
@@ -117,7 +117,7 @@
 
     <nav class="navbar navbar-expand-sm fixed-top">
 
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="@Url.RouteUrl(new { Control="Home",Action="Register"})">
             <img class="img-thumbnail img-fluid" width="32px" src="../Content/images/user.png">
         </a>
         <span class="navbar-text">
