--- a/CTEP/Content/ef.css
+++ b/CTEP/Content/ef.css
@@ -92,3 +92,28 @@ hr {
 .wrapper {
     padding: 40px 0;
 }
+.fixed-top {
+    margin-bottom: 0;
+}
+
+.card {
+    margin-top: 2em;
+    border: 0px;
+}
+
+    .card img {
+        width: 100%;
+        height: 100%;
+    }
+
+.jumbotron {
+    color: #13227a;
+}
+
+.menu-tip-ico {
+    position: relative;
+    right: 1.4em;
+    top: 0.8em;
+    padding: 0;
+    margin: 0;
+}
