--- a/CTEP/Views/UserInfoes/Edit.cshtml
+++ b/CTEP/Views/UserInfoes/Edit.cshtml
@@ -2,14 +2,15 @@
 
 @{
     ViewBag.Title = "Edit";
-}
 
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 <h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>UserInfo</h4>
         <hr />
