--- a/CTEP/Views/Users/Index.cshtml
+++ b/CTEP/Views/Users/Index.cshtml
@@ -2,8 +2,9 @@
 
 @{
     ViewBag.Title = "Index";
-}
 
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 <h2>Index</h2>
 
 <p>
@@ -26,26 +27,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.MAIL)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PW)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.C_ROLE)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.C_STA)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.MAIL)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PW)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.C_ROLE)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.C_STA)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+            </td>
+        </tr>
+    }
 
 </table>
