--- a/CTEP/Views/Home/Histroy.cshtml
+++ b/CTEP/Views/Home/Histroy.cshtml
@@ -1,45 +1,4 @@
 ﻿
 @{
-    ViewBag.Title = "Histroy";
+    ViewBag.Title = "观";
 }
-
-@section style{
-    td a {
-    margin-left: 0.4em;
-    }
-
-}
-
-
-<h2>观</h2>
-
-
-<div class="card">
-    <div class="card-body">
-        <div class="container">
-            <div class="jumbotron">
-
-                <div class="container">
-
-                    <table class="table table-hover table-responsive-sm">
-                        <thead>
-                            <tr>
-                                <th>评价课程</th>
-                                <th>评价分数</th>
-                                <th>操作:</th>
-                            </tr>
-                        </thead>
-                        <tbody id="assList">
-
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-
-
-
-
-        </div>
-    </div>
-</div>
