--- a/CTEP/Views/Home/Login.cshtml
+++ b/CTEP/Views/Home/Login.cshtml
@@ -5,3 +5,38 @@
 
 <h2>Login</h2>
 
+<table class="layui-hide" id="EvalutionList"></table>
+
+
+
+
+<script>
+
+
+
+    layui.use('table', function () {
+        var table = layui.table;
+
+        table.render({
+            elem: '#EvalutionList'
+            , url: '../users/test'
+            , parseData: function (res) { //res 即为原始返回的数据
+                return {
+                    "code": res.StatusNum, //解析接口状态
+                    "msg": res.title, //解析提示文本
+                    "count": res.lenth, //解析数据长度
+                    "data": JSON.parse(res.body)//解析数据列表
+                };
+            }, skin: 'line' //行边框风格
+            //, even: true //开启隔行背景
+            //, size: 'sm' //小尺寸的表格
+            , cols: [[
+                { field: 'ID', width: 80, title: 'ID', sort: true }
+                , { field: 'MAIL', width: 180, title: '邮箱' }
+                , { field: 'PW', title: '密码', minWidth: 150 }
+                , { field: 'C_ROLE', width: 80, title: '角色', sort: true }
+                , { field: 'C_STA', title: '激活状态', width: 80 }
+            ]]
+        });
+    });
+</script>
