--- a/CTEP/Views/UserInfoes/Create.cshtml
+++ b/CTEP/Views/UserInfoes/Create.cshtml
@@ -2,14 +2,14 @@
 
 @{
     ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>UserInfo</h4>
         <hr />
