--- a/CTEP/Views/UserInfoes/Delete.cshtml
+++ b/CTEP/Views/UserInfoes/Delete.cshtml
@@ -2,8 +2,8 @@
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -101,7 +101,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
