--- a/CTEP/Views/Users/Delete.cshtml
+++ b/CTEP/Views/Users/Delete.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Delete";
+
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Delete</h2>
@@ -45,7 +47,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
