评级模块开发完成

--- a/CTEP/Views/Home/Register.cshtml
+++ b/CTEP/Views/Home/Register.cshtml
@@ -183,6 +183,7 @@
 @section scripts{
     <script>
         $(document).ready(function () {
+            localforage.clear();
             $('[data-toggle="tooltip"]').tooltip();
 
             layer.tips('登录注册切换按钮', '#tranLog');
