--- a/CTEP/Content/ef.css
+++ b/CTEP/Content/ef.css
@@ -117,3 +117,45 @@ hr {
     padding: 0;
     margin: 0;
 }
+
+.icon {
+    width: 3em !important;
+    height: 3em!important;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+.icon-lg{
+    width: 4em !important;
+    height: 4em !important;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+
+.icon-sm {
+    width: 2em !important;
+    height: 2em !important;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+
+.icon-xlg {
+    width: 5em !important;
+    height: 5em !important;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+
+.icon-xxlg {
+    width: 6em !important;
+    height: 6em !important;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+.hidden {
+display:none;
+}
