--- a/CTEP/Views/Home/Community.cshtml
+++ b/CTEP/Views/Home/Community.cshtml
@@ -5,69 +5,128 @@
 
 <h2>Community</h2>
 
-<div class="container border" style="margin-top: 6em;padding: 0">
-    <div class="row">
-        <div class="col-sm-2" style="margin: 0;padding-right: 0">
-            <div class="list-group " style="height: 100%;
-          overflow-x: hidden;
-          overflow-y: scroll;
-          text-align: center;
-          font-size: small;">
-                <a href="#" class="list-group-item  list-group-item-action">First item</a>
-                <a href="#" class="list-group-item list-group-item-action">Second item</a>
-                <a href="#" class="list-group-item list-group-item-action">Third item</a>
-                <a href="#" class="list-group-item  list-group-item-action">First item</a>
-                <a href="#" class="list-group-item list-group-item-action">Second item</a>
-                <a href="#" class="list-group-item list-group-item-action">Third item</a>
-                <a href="#" class="list-group-item list-group-item-action">Third item</a>
-                <a href="#" class="list-group-item list-group-item-action">Third item</a>
-                <a href="#" class="list-group-item list-group-item-action">Third item</a>
-                <a href="#" class="list-group-item list-group-item-action">Third item</a>
-                <a href="#" class="list-group-item list-group-item-action">Third item</a>
-                <a href="#" class="list-group-item list-group-item-action">Third item</a>
-            </div>
-        </div>
+<div id="community" class="layui-fluid hidden ">
+    <div class="layui-card">
+        <div class="layui-card-body">
 
-        <div class="col-sm-10" style="margin: 0;padding-left: 0;">
-            <div class="card border" style="height:100%;  margin: 0;">
-                <div class="card-header ">课程讨论</div>
-                <div class="card-body" style="height:30em;  margin: 0;
-            overflow-x: hidden;
-            overflow-y: scroll;
-            text-align: center;
-            font-size: small;">
+            <div class="d-flex">
+                <div id="leftC" class="p-2">
+                    <div class="layui-collapse" lay-accordion>
+
+                        <div class="layui-colla-item">
+                            <h2 class="layui-colla-title">软甲工程</h2>
+                            <div class="layui-colla-content layui-show">内容区域</div>
+                        </div>
+                        <div class="layui-colla-item">
+                            <h2 class="layui-colla-title">软件测试</h2>
+                            <div class="layui-colla-content layui-show">
+                           <a class="btn-link"></a>
+                            
+                            </div>
+                        </div>
+                        <div class="layui-colla-item">
+                            <h2 class="layui-colla-title">大学体育</h2>
+                            <div class="layui-colla-content layui-show">内容区域</div>
+                        </div>
+                   
+                    
+                    </div>
+                </div>
+                <div class="p-2 flex-grow-1" id="rightC">
+
+                    <div class="layui-card">
+                        <div class="layui-card-body">
+
+                            <ul class="layui-timeline">
+                                <li class="layui-timeline-item">
+                                    <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                                    <div class="layui-timeline-content layui-text">
+                                        <h3 class="layui-timeline-title">8月18日</h3>
+                                        <p>
+                                           第 3个用户评价
+                                            <br>教学能力 ：88 
+                                            <br>无论它能走多远，抑或如何支撑？至少我曾倾注全心，无怨无悔 <i class="layui-icon"></i>
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="layui-timeline-item">
+                                    <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                                    <div class="layui-timeline-content layui-text">
+                                        <h3 class="layui-timeline-title">8月16日</h3>
+                                        <p>杜甫的思想核心是儒家的仁政思想，他有“<em>致君尧舜上，再使风俗淳</em>”的宏伟抱负。个人最爱的名篇有：</p>
+                                        <ul>
+                                            <li>《登高》</li>
+                                            <li>《茅屋为秋风所破歌》</li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="layui-timeline-item">
+                                    <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                                    <div class="layui-timeline-content layui-text">
+                                        <h3 class="layui-timeline-title">8月15日</h3>
+                                        <p>用户
+                                           
+                                           老师讲的挺好的
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="layui-timeline-item">
+                                    <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                                    <div class="layui-timeline-content layui-text">
+                                        <div class="layui-timeline-title">发起评价</div>
+                                    </div>
+                                </li>
+                            </ul>
 
 
-                    <div class="alert alert-dismissible border rounded-0">
-                        <button type="button" class="close" data-dismiss="alert">&times;</button>
-                        <a href="#" class="alert-link" style="float:left;">
-                            <img src="../content/images/biu.png" style=" width: 2em;">
-                            <span class="badge badge-secondary">2019-12-1 2:00:34  </span>
-                           
-                        </a>
-                        <strong>吃火星的宝宝:</strong>
-                        欢迎使用！
-                        <a href="#" class="alert-link">
-                            <span class="badge badge-pill bg-warning">附件:ctep.exe</span>
-                        </a>
+
+                        </div>
                     </div>
 
-
-                </div>
-
-
-
-
-                <div class="card-footer">
-
-                    <form class="form-inline flex-row-reverse">
-                        <button type="submit" class="btn btn-outline-info btn-sm rounded-0" style="margin-left:1em">发送</button>
-                        <input type="text" class="form-control form-control-sm w-75 rounded-0 " id="email"
-                               placeholder="Enter Ms" />
-                    </form>
-
                 </div>
             </div>
+
         </div>
     </div>
+
 </div>
+
+<script>
+
+    layui.use('element', function () {
+        var element = layui.element;
+
+    });
+    var index = layer.open({
+        type: 1,//类型
+        area: '600px',//定义宽和高
+        title: "你好！",//题目
+        shade: 0,
+        shadeClose: false,//点击遮罩层关闭
+        content: $('#community'),//打开的内容
+        maxmin: true,
+        scrollbar: false,
+        resizing: function (layero) {
+            let hight = parseInt(layero.css("height").replace("px", ""));
+            let width = parseInt(layero.css("width").replace("px", ""));
+            $("#leftC").css("height", hight - 70 + "px");
+            $("#rightC").css("height", hight - 70 + "px");
+        }
+    });
+
+    //layer.tab({
+    //    area: ['600px', '300px'],
+    //    tab: [{
+    //        title: 'TAB1',
+    //        content: '内容1'
+    //    }, {
+    //        title: 'TAB2',
+    //        content: '内容2'
+    //    }, {
+    //        title: 'TAB3',
+    //        content: '内容3'
+    //    }]
+    //});
+    //layer.iframeAuto(index);
+
+</script>
