--- a/CTEP/Views/Home/Index.cshtml
+++ b/CTEP/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 
                 <p class="card-text">
 
-                    <svg class="icon" aria-hidden="true">
+                    <svg class="icon-xxlg" aria-hidden="true">
                         <use xlink:href="#icon-emoji_kaixin"></use>
                     </svg>
 
@@ -119,33 +119,3 @@
 
 </div>
 
-<script>
-    
-    $(document).ready(function () {
-
-        var user = {};
-        var userInfo = {};
-        localforage.getItem('emb_user').then(function (value) {
-            // 当离线仓库中的值被载入时，此处代码运行
-
-            user = value;
-            console.log('emb_user↓');
-            console.log(value);
-            $("#welcomTxt").text("尊敬的 " + value.MAIL + "欢迎您使用!");
-            $("#user_name").text(value.MAIL);
-
-        }).catch(function (err) { console.log(err); });
-
-        localforage.getItem('emb_info').then(function (value) {
-            // 当离线仓库中的值被载入时，此处代码运行
-
-            userInfo = value;
-            console.log('emb_info↓');
-            console.log(value); 
-            $("#welcomTxt").text("尊敬的 " + userInfo.S_Name + "欢迎您使用!");
-            $("#user_name").text(userInfo.S_Name);
-        }).catch(function (err) { console.log(err); });
-    })
-
-    
-</script>
