--- a/CTEP/Views/Shared/_LayoutUser.cshtml
+++ b/CTEP/Views/Shared/_LayoutUser.cshtml
@@ -141,7 +141,7 @@
 
         <ul class="nav ">
             <li class="nav-item">
-                <a class="nav-link text-secondary" href="javascript:void(0)">关于我</a>
+                <a class="nav-link text-secondary" href="@Url.RouteUrl(new { Control="Home",Action="About"})">关于我</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-secondary" href="javascript:void(0)">问题反馈</a>
