--- a/CTEP/Views/Shared/_LayoutUser.cshtml
+++ b/CTEP/Views/Shared/_LayoutUser.cshtml
@@ -135,16 +135,35 @@
     </div>
 
     <nav class="nav justify-content-center navbar-light  ">
+        <span class="">
+            <svg class="icon-sm" aria-hidden="true">
+                <use xlink:href="#icon-quanzi3"></use>
+            </svg>
+        </span>
         <span class="navbar-text">
             <small> Based on .NET MVC . Design Power By EMB (吃火星的宝宝)-15级-金融三班朱盟 .</small>
         </span>
 
         <ul class="nav ">
             <li class="nav-item">
-                <a class="nav-link text-secondary" href="@Url.RouteUrl(new { Control="Home",Action="About"})">关于我</a>
+
+                <a class="nav-link text-secondary" href="@Url.RouteUrl(new { Control="Home",Action="Contact"})">
+                    <svg class="icon-xsm" aria-hidden="true">
+                        <use xlink:href="#icon-quanzi2"></use>
+                    </svg>
+                    关于我
+
+
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-secondary" href="javascript:void(0)">问题反馈</a>
+                
+                <a class="nav-link text-secondary" target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=_p_XmJuVmJuVl5uTlrqclYKXm5OW1JmVlw" style="text-decoration:none;">
+                    <svg class="icon-xsm" aria-hidden="true">
+                        <use xlink:href="#icon-bianji2"></use>
+                    </svg>
+                反馈
+                </a>
             </li>
         </ul>
     </nav>
