--- a/CTEP/Views/Home/Contact.cshtml
+++ b/CTEP/Views/Home/Contact.cshtml
@@ -1,17 +1,15 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "关于我们";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    <a href="https://github.com/embaobao/EM" target="_blank">Git Hub</a>  <br />
+    河南|洛阳<br />
+    <abbr title="Phone">PhoneNumber:</abbr>
+    15515365219
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:1132067567@qq.com">1132067567@qq.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:chihuoxingdebaobao@163.com">chihuoxingdebaobao@163.com</a>
 </address>
